# SeamsEasy

./: CMakeLists.txt  SeamsEasyCmd.h  SeamsEasyNode.cpp  SeamsEasyNode.h  StitchEasyCmd.cpp  StitchEasyCtxCmd.cpp  StitchEasyNode.h  stitchKit.vcxproj  stitchKit.vcxproj.filters
